#fix : scrollbar silver --> gray

--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -164,7 +164,7 @@ footer {
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: silver;
+    background-color: gray;
     border-radius: 0.25rem;
 
     --bg-opacity: 1;
